[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kamino-liq"
version = "0.1.0"
description = "Read a Solana wallet's Kamino Lend position and compute its liquidation prices."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32",
    "rich>=15.0",
    "solders>=0.27",
    "typer>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "coverage[toml]>=7.0", "pylint>=3.3"]

[project.scripts]
kamino-liq = "kamino_liq.cli:app"

[tool.setuptools]
packages = ["kamino_liq"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["kamino_liq"]
omit = ["kamino_liq/__main__.py"]  # the `python -m` shim, exercised by hand

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
# Typer commands carry one parameter per CLI option, which is idiomatic.
max-args = 8
max-positional-arguments = 8
